# SmallTarget

./: Cargo.toml  LICENSE  README.md  SmallTarget_LICENSE  rustfmt.toml
.github/workflows/: rust.yml
app/: package.json  pnpm-lock.yaml
app/src-tauri/: Cargo.toml
app/src-tauri/src/: main.rs
audio/: Cargo.toml
control/: Cargo.toml
control/src/: action.rs  input_control.rs  key_parser.rs  lib.rs
control/tests/: action_test.rs  input_control_test.rs  integration_browser.rs
control/tests/common/: browser.rs  browser_events.rs  enigo_test.rs
core/: Cargo.toml
llm/: Cargo.toml
llm/src/: action_parser.rs  call_ai.rs  lib.rs  openai_request.rs  promps.rs
llm/tests/: action_parser_test.rs  ui_tars_model_call.rs  ui_tars_model_call_test.rs
small-target-app/: package.json
small-target-app/src-tauri/: tauri.conf.json
small-target-control/: Cargo.toml
small-target-control/src/: action.rs  key_parser.rs
small-target-control/tests/: action_test.rs  integration_browser.rs
small-target-control/tests/common/: enigo_test.rs
small-target-core/: Cargo.toml
small-target-image/: Cargo.toml
small-target-image/src/: image_utils.rs  lib.rs
small-target-llm/: Cargo.toml
small-target-llm/src/: openai_request.rs  promps.rs
small-target-llm/tests/: action_parser_test.rs  ui_tars_model_call_test.rs
small-target-vision/: Cargo.toml
small-target-vision/src/: lib.rs  monitor.rs
small-target-vision/tests/: capture_screen_test.rs
src/v1/: chat_completion.rs
vision/: Cargo.toml
vision/src/: capture_screenshot_by_window.rs  lib.rs
vision/tests/: capture_screen_test.rs
