[workspace]
members = ["small-target-vision","small-target-audio","small-target-control", "small-target-core", "small-target-llm", "small-target-image"]
resolver = "2"
exclude = ["app/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache License 2.0 and SmallTarget License"
description = "SmallTarget is a GUI agent application for control your computer/phone/pad using natural language with the power of AI."
authors = ["Lin,xiaolong <linsmalldragon@gmail.com>"]

[workspace.dependencies]

# Logging related dependencies
log = "0.4.26"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = { version = "0.2.3" }
anyhow = "1.0.96"
serde = "1.0.218"
serde_json = "1.0.139"

# Asynchronous runtime
tokio = { version = "1.43.0", features = ["full", "tracing"] }

# Thread Safe Lazy Initialization
once_cell = "1.20.3"

# Image processing
image = "0.25"
base64 = "0.22"


windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
] }

[profile.dev]
debug = 2  # 必须≥1才能查看完整变量