[package]
name = "control"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
enigo = { git = "https://github.com/linsmalldragon/enigo.git", branch = "main", features = [
    "serde",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }


[dev-dependencies]
env_logger = "0.11"
tungstenite = "0.26"
url = "2"
webbrowser = "1.0"
ron = "0.8"
strum = "0.27"
strum_macros = "0.27"
rdev = "0.5"           # Test the main_display() function
mouse_position = "0.1"
