[package]
name = "llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
log = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
openai-api-rs = "5.2.6"