[package]
name = "llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
log = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
small-target-image = { path = "../small-target-image" }
openai-api-rs = "5.2.6"
regex = "1.9"
lazy_static = "1.4"
